--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,13 @@ body {
     height: 100vh;
     align-content: center;
 }
+#piano {
+    height: 290px;
+    padding: 90px 30px 0 30px;
+    background-color: gray;
+    border-radius: 10px;
+}
+
+
+
+
