--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     justify-content: center;
     height: 100vh;
-    align-content: center;
+    align-items: center;
 }
 #piano {
     height: 290px;
@@ -12,6 +12,33 @@ body {
     background-color: gray;
     border-radius: 10px;
 }
+.keys {
+    position: relative;
+}
+.white-key {
+    width: 68px;
+    height: 280px;
+    background-color: #fff;
+    border-radius: 0 0 5px 5px;
+    border: 2px solid black;
+    box-sizing: border-box;
+}
+.white-keys {
+    display: flex;
+}
+.black-keys {
+    position: relative;
+    display: flex;
+}
+.black-key {
+    width: 38px;
+    height: 160px;
+    border-radius: 0 0 5px 5px;
+    box-sizing: border-box;
+    position: absolute;
+    background-color: black;
+}
+
 
 
 
